--- a/python/data/manifest.json
+++ b/python/data/manifest.json
@@ -39,5 +39,8 @@
   "md5sum" : "f03684187568eea6709b7e8d49c7d6c1",
   "url" : "http://tux.creatis.insa-lyon.fr/~srit/POPI/Masks/70Mask-MetaImage.tar",
   "archive" : "true"
+ },
+ "fib_sem_bacillus_subtilis.mha" : {
+     "md5sum" : "0f249f48ee671d79367e831d734840e8"
  }
 }
